--- a/package.json
+++ b/package.json
@@ -15,13 +15,22 @@
   },
   "devDependencies": {
     "babel-core": "^6.20.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.9",
     "babel-preset-es2015": "^6.18.0",
+    "baggage-loader": "^0.2.4",
+    "clean-webpack-plugin": "^0.1.14",
     "css-loader": "^0.26.1",
+    "eslint": "^3.12.1",
+    "eslint-loader": "^1.6.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
     "node-sass": "^3.13.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
-    "webpack": "^1.14.0"
+    "url-loader": "^0.5.7",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
